LMDB 0.9 Change Log

LMDB 0.9.14 Engineering
	Fix to support 64K page size (ITS#7713)
	Fix to persist decreased as well as increased mapsizes (ITS#7789)
	Fix cursor bug when deleting last node of a DUPSORT key
	Fix mdb_env_info to return FIXEDMAP address
	Fix ambiguous error code from writing to closed DBI (ITS#7825)
	Fix mdb_copy copying past end of file (ITS#7886)
	Fix cursor bugs from page_merge/rebalance
	Fix to dirty fewer pages in deletes (mdb_page_loose())
	Fix Windows compat issues in mtests (ITS#7879)
	Add compacting variant of mdb_copy
	Add BigEndian integer key compare code
	Add mdb_dump/mdb_load utilities

LMDB 0.9.13 Release (2014/06/18)
	Fix mdb_page_alloc unlimited overflow page search
	Documentation
		Re-fix MDB_CURRENT doc (ITS#7793)
		Fix MDB_GET_MULTIPLE/MDB_NEXT_MULTIPLE doc

LMDB 0.9.12 Release (2014/06/13)
	Fix MDB_GET_BOTH regression (ITS#7875,#7681)
	Fix MDB_MULTIPLE writing multiple keys (ITS#7834)
	Fix mdb_rebalance (ITS#7829)
	Fix mdb_page_split (ITS#7815)
	Fix md_entries count (ITS#7861,#7828,#7793)
	Fix MDB_CURRENT (ITS#7793)
	Fix possible crash on Windows DLL detach
	Misc code cleanup
	Documentation
		mdb_cursor_put: cursor moves on error (ITS#7771)


LMDB 0.9.11 Release (2014/01/15)
	Add mdb_env_set_assert() (ITS#7775)
	Fix: invalidate txn on page allocation errors (ITS#7377)
	Fix xcursor tracking in mdb_cursor_del0() (ITS#7771)
	Fix corruption from deletes (ITS#7756)
	Fix Windows/MSVC build issues
	Raise safe limit of max MDB_MAXKEYSIZE
	Misc code cleanup
	Documentation
		Remove spurious note about non-overlapping flags (ITS#7665)

LMDB 0.9.10 Release (2013/11/12)
	Add MDB_NOMEMINIT option
	Fix mdb_page_split() again (ITS#7589)
	Fix MDB_NORDAHEAD definition (ITS#7734)
	Fix mdb_cursor_del() positioning (ITS#7733)
	Partial fix for larger page sizes (ITS#7713)
	Fix Windows64/MSVC build issues

LMDB 0.9.9 Release (2013/10/24)
	Add mdb_env_get_fd()
	Add MDB_NORDAHEAD option
	Add MDB_NOLOCK option